--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,28 @@
 $separator_color: #555555;
 
 .App {
-  margin: 3vh 10vw;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
   &__ {
+    &Scroll {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      max-height: 100%;
+      overflow-y: auto;
+      padding: 3vh 10vw ;
+
+      > * {
+        width: 100%;
+      }
+    }
+
     &Introduction {
       white-space: pre-line;
     }
@@ -18,6 +37,12 @@ $separator_color: #555555;
       &:hover {
         filter: brightness(0.8);
       }
+    }
+
+    &Langs {
+      position: fixed;
+      right: 2vw;
+      top: 2vw;
     }
   }
 }
