--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,14 @@
-body {
+html, body, #root {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
