--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ $separator_color: #555555;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background-color: #F5F5F5;
 
   &__ {
     &Scroll {
@@ -30,7 +31,8 @@ $separator_color: #555555;
     }
 
     &ProjectPreviewImage {
-      height: 100%;
+      min-width: 100%;
+      min-height: 100%;
       width: auto;
 
       transition: filter .5s;
@@ -55,4 +57,8 @@ $separator_color: #555555;
       text-align: center;
     }
   }
+}
+
+.MuiGridListTileBar-title	{
+  white-space: normal !important;
 }
