--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,11 @@ html, body, #root {
 * {
   box-sizing: border-box;
 }
+
+@media print
+{
+  .noprint, .noprint *
+  {
+    display: none !important;
+  }
+}
