--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,6 @@
-@import 'colors';
-@import 'node_modules/sass-google-fonts/src/GoogleFonts.scss';
-$font: 'Noto Sans';
-$fontMono: 'Noto Sans Mono';
-@include google-font($font);
-@include google-font($fontMono);
+@import 'theme';
 @import 'shared';
 
-$color: #000;
 
 .App {
   @include absolute-lt;
@@ -26,7 +20,7 @@ $color: #000;
 
   &__UtilButton {
     cursor: pointer;
-    color: lightgray;
+    color: $color3;
 
     &:hover {
       color: $color;
