--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,10 @@
   @include absolute-lt;
   @include size(100%);
   font-family: $font;
-  padding: 2.5vw 10vw;
-  overflow: auto;
+  padding: 2.5vw 20vw;
+  overflow: hidden auto;
   color: $color;
+  line-height: 1.5;
 
   @media (orientation: portrait) {
     padding: 2.5vw;
@@ -18,26 +19,52 @@
     margin: 1.5vw 0;
   }
 
+  &__Intro {
+    display: grid;
+    margin-top: $spacing;
+    // gap: 1vw;
+  }
+
   &__UtilButtons {
     @include flex(row);
     font-family: $fontMono;
+
+    grid-column: 1;
+    grid-row: 1;
   }
 
   &__UtilButton {
     @include Selectable;
   }
 
-  &__Intro {
-    display: flex;
-    flex-direction: row;
+  &__IntroTitle {
+    grid-column: 1;
+    grid-row: 2;
+    margin-top: 0;
+    line-height: 1;
+  }
+
+  &__IntroText {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  &__Contacts {
+    grid-column: 1;
+    grid-row: 4;
   }
 
   &__Photo {
-    flex: 0 0 auto;
+    grid-column: 2;
+    grid-row: 2/4;
+    
     width: 10vw;
     height: 10vw;
-    margin-left: 5vw;
     transform: scaleX(-1);
+
+    border-radius: 50%;
+    border: 1px solid gray;
+    background-color: lightseagreen;
 
     @media (orientation: portrait) {
       width: 20vw;
