--- a/src/FullscreenGallery.scss
+++ b/src/FullscreenGallery.scss
@@ -25,6 +25,14 @@
         &:not(:last-child) {
           margin-right: 1vw;
         }
+
+        @media (orientation: portrait) {
+            height: 10vw;
+        }
+
+        &_Current {
+            border: 2px solid black;
+        }
     }
 
     &__CloseButton {
@@ -45,5 +53,12 @@
     &__PanZoomWrapper {
         @include absolute-lt;
         @include size(100% !important);
+    }
+
+    &__Description {
+        width: 100%;
+        text-align: center;
+        font-family: $font;
+        font-size: 1.2em;
     }
 }
