--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@ html, body, #root {
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 * {
@@ -17,6 +17,14 @@ html, body, #root {
 @media print
 {
   .noprint, .noprint *
+  {
+    display: none !important;
+  }
+}
+
+@media screen
+{
+  .noscreen, .noscreen *
   {
     display: none !important;
   }
