--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,13 @@
 html, body, #root {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
-  font-family: Roboto, sans-serif;
-  // overflow: hidden;
+  position: relative;
+
+  @media screen {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
 * {
