--- a/src/Links.scss
+++ b/src/Links.scss
@@ -1,7 +1,7 @@
 @import 'theme';
 @import 'shared';
 
-.Contacts {
+.Links {
   $ContactCopyButtonClass: "#{&}__ContactCopyButton";
 
   display: flex;
